fix(app) : add wrap to tags flex

--- a/src/sass/components/tag.scss
+++ b/src/sass/components/tag.scss
@@ -1,10 +1,6 @@
 .tags__container {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: auto auto;
-    grid-auto-flow: row;
-    justify-content: flex-start;
-    align-items: start;
+    display: flex;
+    flex-flow: row wrap;
     gap: 0.5rem;
     .tag {
         padding: 0.2rem 1.5rem;
@@ -13,22 +9,14 @@
         color: #FFFFFF;
         white-space: nowrap;
         font-size: 0.8rem;
-        display: block;
-        text-align: center;
-        margin: auto;
-        
     }
 }
 @media #{$medium-up} {
     .tags__container {
-        grid-template-columns: auto auto auto auto;
         gap:1rem;
         width: 100%;
         .tag {
             padding: 0.5rem 1.5rem;
-        //    font-size: inherit;
-           margin: auto;
-           
         }
     }
 }
